--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "mdb-react-ui-kit": "^6.0.0",
+    "mongoose": "^7.1.0",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
